--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "test-task",
+  "name": "stream-factory",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist",
   "scripts": {
-    "test": "yarn jest"
+    "test": "yarn jest",
+    "build": "tsc -b"
   },
   "keywords": [],
   "author": "",
